[UI] Link buttons horizontal padding causes alignment issues
    - Please add in release notes: 'button padding has been removed for link type buttons; button margin has been removed as default for all buttons.  Update external components accordingly.'

    #184, #181 (for the removal of margin)

--- a/src/clarity/buttons/_buttons.clarity.scss
+++ b/src/clarity/buttons/_buttons.clarity.scss
@@ -194,7 +194,7 @@ $clr-button-appearance-map: (
 @mixin btn-appearance() {
     cursor: pointer;
     display: inline-block;
-    margin: $clr-button-vertical-margin $clr-button-horizontal-margin $clr-button-vertical-margin 0;
+    // margin: $clr-button-vertical-margin $clr-button-horizontal-margin $clr-button-vertical-margin 0;
 
     // Overrides a Fix for IOS in BS4 _normalize.scss (~ln 330)
     // `!important` is to override specificity in this instance
@@ -257,7 +257,7 @@ $clr-button-appearance-map: (
 
         &.btn-link {
             @include populateButtonProperties(link);
-            margin: $clr-button-vertical-margin 0;
+            padding: 0;
         }
 
         &.btn-inverse {
